git commit -m "加盟网页更新"

--- a/加盟/Join.html
+++ b/加盟/Join.html
@@ -15,10 +15,19 @@
 					<li>小本投资</li>
 					<li>配送类别</li>
 					<li>特色热点</li>
-					<li>成功案例</li>
+					<li>综合展示</li>
+					<li>加盟问答</li>
 					<li>返回首页</li>
 				</ul>
 			</nav>
+		</div>
+		<div id="subject">
+			<h1 class="name">送货到家——————————百货为您配送到家！</h1>
+			<img src="../加盟/Img/首页.jpg" height="80%" width="100%">
+		</div>
+		<div id="last">
+			<h1 class="cc">不落下一点一滴小细节</h1>
+			<h2 class="bb">我们为您打点好创业所需</h2>
 		</div>
 	</header>
 </body>
